examples/datalog/14_aggregations/78_count_with_filter.dl
% Test: COUNT with filter condition
% Expected: Count only matching rows
% Category: 14_aggregations
% Priority: P2 - Aggregation patterns

.kg create test_count_filter
.kg use test_count_filter

+items[(1, "A", true), (2, "B", false), (3, "A", true), (4, "A", false)].

% Count active items in category A
+active_a_count(<COUNT:Id>) :- items(Id, "A", true).

?- active_a_count(C).

.kg use default
.kg drop test_count_filter
